Fix event threading issues